--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.25.2",
     "react": "18.2.0",
     "react-native": "0.71.7"
   },
@@ -24,13 +24,25 @@
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.71.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.1",
+    "lint-staged": "^13.2.2",
     "metro-react-native-babel-preset": "^0.76.3",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "*"
   },
   "jest": {
     "preset": "react-native"
